zinc15 used for single mols